--- a/styles.css
+++ b/styles.css
@@ -700,17 +700,18 @@ font-family: 'Great Vibes', cursive;
 }
 /* Başlangıçta menü gizli olsun */
 .nav-links {
+  border-radius: 5%;
   display: none;
   flex-direction: column;
   position: absolute;
-  top: 35px; /* header yüksekliğine göre ayarla */
+  top: 30px; /* header yüksekliğine göre ayarla */
   left:0px; /* hamburger ile hizala */
   background-color: #fff;
   width: 125px;
+  height: 240px;
   box-shadow: 0 8px 16px rgba(0,0,0,0.2);
   z-index: 1200; /* hamburgerden yüksek */
   padding: 10px 0;
-  opacity:var(#000000);
 }
 .nav-links a {
   color: #003366;
