--- a/styles.css
+++ b/styles.css
@@ -708,7 +708,7 @@ font-family: 'Great Vibes', cursive;
   left:0px; /* hamburger ile hizala */
   background-color: #fff;
   width: 125px;
-  height: 245px;
+  height: 230px;
   box-shadow: 0 8px 16px rgba(0,0,0,0.2);
   z-index: 1200; /* hamburgerden yüksek */
   padding: 10px 0;
@@ -775,13 +775,12 @@ font-family: 'Great Vibes', cursive;
 @media (max-width: 700px) {
   .nav-links {
     position: fixed;
-    left: -100%;
-    height: 200px;
-    width: 120px;
+    height: 210px;
+    width: 110px;
     background-color: white;
     flex-direction: column;
     align-items: flex-start;
-    font-weight: 500;
+    font-weight:bold;
     transition: left 0.3s ease;
     z-index: 999;
   }
